// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[` 1`] = `undefined`;

exports[` 2`] = `undefined`;

exports[`Document Component should render AMP version correctly 1`] = `
<html
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <link
      crossorigin="anonymous"
      href="http://example.com"
      rel="preconnect"
    />
    <link
      href="http://example.com"
      rel="dns-prefetch"
    />
    <title>
      Test title
    </title>
    <link
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      amp-custom=""
    >
      html { color: red; }
    </style>
    <script
      type="application/ld+json"
    />
    <style
      amp-boilerplate=""
    >
      body{-webkit-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-moz-animation:-amp-start 8s steps(1,end) 0s 1 normal both;-ms-animation:-amp-start 8s steps(1,end) 0s 1 normal both;animation:-amp-start 8s steps(1,end) 0s 1 normal both}@-webkit-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-moz-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-ms-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@-o-keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}@keyframes -amp-start{from{visibility:hidden}to{visibility:visible}}
    </style>
    <noscript />
    <script
      async=""
      src="https://cdn.ampproject.org/v0.js"
    />
    <script
      async=""
      custom-element="amp-geo"
      src="https://cdn.ampproject.org/v0/amp-geo-0.1.js"
    />
    <script
      async=""
      custom-element="amp-consent"
      src="https://cdn.ampproject.org/v0/amp-consent-0.1.js"
    />
    <script
      async=""
      custom-element="amp-analytics"
      src="https://cdn.ampproject.org/v0/amp-analytics-0.1.js"
    />
  </head>
  <body>
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
  </body>
</html>
`;

exports[`Document Component should render correctly 1`] = `
<html
  lang="test"
>
  <head>
    <meta
      content="width=device-width, initial-scale=1, minimum-scale=1"
      name="viewport"
    />
    <link
      href="/favicon.ico"
      rel="shortcut icon"
      type="image/x-icon"
    />
    <link
      crossorigin="anonymous"
      href="http://example.com"
      rel="preconnect"
    />
    <link
      href="http://example.com"
      rel="dns-prefetch"
    />
    <title>
      Test title
    </title>
    <link
      href="https://www.bbc.com/news/articles/c6v11qzyv8po"
      rel="canonical"
    />
    <style
      data-styled-components="abc"
    >
      html { color: red; }
    </style>
    <script
      type="application/ld+json"
    />
  </head>
  <body>
    <div
      id="root"
    >
      <h1>
        App!
      </h1>
    </div>
    <script>
      window.SIMORGH_DATA={"test":"data"}
    </script>
    <div>
      <!--[if !IE]&gt;&lt;!-->
    </div>
    <script
      crossorigin="anonymous"
      defer=""
      src="http://example.com/file.js"
      type="text/javascript"
    />
    <div>
      <!--&lt;![endif]-->
    </div>
  </body>
</html>
`;
